--- a/.ebextensions/environmentvariables.config
+++ b/.ebextensions/environmentvariables.config
@@ -2,6 +2,6 @@ option_settings:
   - option_name: MONGO_URI
     value: "mongodb+srv://userCloud:Cy0WOU9JPsqpS8zd@cluster0.3itidpk.mongodb.net/project"
   - option_name: COMPANY_SERVICE_URL
-    value: "http://localhost:3000/companies"
+    value: "http://obligatorio-asp-gateway-env.eba-2fryd8fa.us-east-1.elasticbeanstalk.com/companies"
   - option_name: PORT
     value: "6000"
